--- a/.github/workflows/producao.yml
+++ b/.github/workflows/producao.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Pegar código do Repositório
         uses: actions/checkout@v3
-      
+
       - name: Instalando pacotes do npm
         run: npm install
 
@@ -25,10 +25,10 @@ jobs:
 
       - name: Apagando pasta do node_modules
         run: rm -rf node_modules
-      
+
       - name: Apagando pasta .git
         run: rm -rf .git
-      
+
       - name: Arquivos e pastas
         run: ls
 
@@ -38,7 +38,7 @@ jobs:
           name: artefato
           retention-days: 1
           path: ./
-  
+
   job2:
     name: CD - Deploy na Vercel
     needs: job1
@@ -48,21 +48,21 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artefato
-      
+
       - name: Instalando pacotes do npm
         run: npm install
 
       - name: Arquivos e pastas do artefato
         run: ls
-      
+
       - name: Instalando CLI da Vercel
         run: npm install --global vercel@latest
 
-      - name: Buscando informações de ambiente no vercel
-        run: vercel pull --yes --environment=preview --token=${{secrets.VERCEL_TOKEN}}
+      - name: Buscando informações de ambiente no Vercel
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Buildando artefatos do projeto  
+      - name: Buildando artefatos do projeto
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      
-      - name: Deploy de artefatos do projeto na vercel
-        run: vercel deploy --prebuilt --prod --token=${{secrets.VERCEL_TOKEN}}
+
+      - name: Deploy de artefatos do projeto na Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
